Start EaselJS integration

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,9 +4,11 @@
     <head>
         <meta charset="utf-8"/>
         <title>Hello Babel!</title>
+        <script src="../../bower_components/EaselJS/lib/easeljs-0.8.2.min.js"></script>
         <script src="../../bundle.js"></script>
     </head>
     <body>
       <h1>Test</h1>
+      <canvas id="canvas">Your browser doesn't support HTML5 canvas</canvas>
     </body>
 </html>
