--- a/src/html/index.html
+++ b/src/html/index.html
@@ -10,6 +10,25 @@
     </head>
     <body>
       <div class="display">
+
+        <form id="add_transition">
+          Transition from
+          <select id="from_transition">
+          </select>
+          to
+          <select id="to_transition">
+          </select>
+          if <input type="text" id="if_symbol" maxlength="1" size="1"/>
+          , then move tape
+          <select id="tape_move">
+            <option value="left">Left</option>
+            <option value="right">Right</option>
+          </select>
+          and put <input type="text" id="put_symbol" maxlength="1" size="1"/>.
+          <br/>
+          <button type="submit">Add transition</button>
+        </form>
+
         <canvas id="canvas" width="800" height="500">Your browser doesn't support HTML5 canvas</canvas>
           <div class="controls">
             <button id="states">States</button>
