--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8"/>
         <title>Hello Babel!</title>
         <link rel="stylesheet" type="text/css" href="../css/main.css"/>
-        <script src="../../bower_components/EaselJS/lib/easeljs-0.8.2.min.js"></script>
+        <script src="../../bower_components/cytoscape/dist/cytoscape.min.js"></script>
         <script src="../../bundle.js"></script>
     </head>
     <body>
@@ -29,7 +29,8 @@
           <button type="submit">Add transition</button>
         </form>
 
-        <canvas id="canvas" width="800" height="500">Your browser doesn't support HTML5 canvas</canvas>
+        <div id="cy"/>
+
           <div class="controls">
             <button id="states">States</button>
             <button id="transitions">Transitions</button>
