Add basic tape representation and manager

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -29,7 +29,15 @@
           <button type="submit">Add transition</button>
         </form>
 
-        <div id="cy"/>
+        <div id="cy"></div>
+
+        <table id="tape">
+          <td class="tape-box">1</td>
+          <td class="tape-box">2</td>
+          <td class="tape-box">3</td>
+          <td class="tape-box">4</td>
+          <td class="tape-box">5</td>
+        </table>
 
           <div class="controls">
             <button id="states">States</button>
