Add tape move controls

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -31,13 +31,17 @@
 
         <div id="cy"></div>
 
-        <table id="tape">
-          <td class="tape-box">1</td>
-          <td class="tape-box">2</td>
-          <td class="tape-box">3</td>
-          <td class="tape-box">4</td>
-          <td class="tape-box">5</td>
-        </table>
+        <div id="tape-container">
+          <button class="tape-direction" id="tape-left"><<</button>
+          <button class="tape-direction" id="tape-right">>></button>
+          <table id="tape">
+            <td class="tape-box">1</td>
+            <td class="tape-box">2</td>
+            <td class="tape-box">3</td>
+            <td class="tape-box">4</td>
+            <td class="tape-box">5</td>
+          </table>
+        </div>
 
           <div class="controls">
             <button id="states">States</button>
