--- a/src/html/index.html
+++ b/src/html/index.html
@@ -44,8 +44,9 @@
         </div>
 
           <div class="controls">
-            <button id="states">States</button>
-            <button id="transitions">Transitions</button>
+            <button class="add-state" id="add-nonterm-state">Add nonterminal state</button>
+            <button class="add-state" id="add-success-state">Add success state</button>
+            <button class="add-state" id="add-failure-state">Add failure state</button>
             <button id="run">Run</button>
         </div>
       </div>
