Mostly working machine!

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -18,13 +18,13 @@
           to
           <select id="to_transition">
           </select>
-          if <input type="text" id="if_symbol" maxlength="1" size="1"/>
+          if <input type="text" id="if_symbol" maxlength="1" size="1" value="_"/>
           , then move tape
           <select id="tape_move">
             <option value="left">Left</option>
             <option value="right">Right</option>
           </select>
-          and put <input type="text" id="put_symbol" maxlength="1" size="1"/>.
+          and put <input type="text" id="put_symbol" maxlength="1" size="1" value="_"/>.
           <br/>
           <button type="submit">Add transition</button>
         </form>
