Add delay slider

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -47,7 +47,11 @@
             <button class="add-state" id="add-nonterm-state">Add nonterminal state</button>
             <button class="add-state" id="add-success-state">Add success state</button>
             <button class="add-state" id="add-failure-state">Add failure state</button>
+            <input id="delay" type="range" min="0" max="5000" />
+            <span id="delay-show"></span>
             <button id="run">Run</button>
+        </div>
+        <div id="result">
         </div>
       </div>
 
